--- a/examples/CrystalQuartz.Examples.RemoteScheduler/CrystalQuartz.Example.RemoteScheduler.Server/packages.config
+++ b/examples/CrystalQuartz.Examples.RemoteScheduler/CrystalQuartz.Example.RemoteScheduler.Server/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="Quartz" version="2.0.1" targetFramework="net40" />
+  <package id="TopShelf" version="3.1.0" targetFramework="net40" />
 </packages>
